--- a/src/app/list-product/list-product.component.html
+++ b/src/app/list-product/list-product.component.html
@@ -1,4 +1,4 @@
-produits <input type="text" [(ngModel)]="maxPrice">
+<h1>produits</h1> <input type="text" [(ngModel)]="maxPrice">
 <table>
     <tr>
       <td>ID</td>
