--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<app-header></app-header>
-<app-list-product></app-list-product>
-<app-footer></app-footer>
+<div class="container">
+  <app-header></app-header>
+  <app-list-product></app-list-product>
+  <app-footer></app-footer>
+
+</div>
