--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
 <div class="container">
+
   <app-header></app-header>
-  <app-list-product></app-list-product>
+  <router-outlet></router-outlet>
   <app-footer></app-footer>
+
+
 
 </div>
