--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,6 +10,9 @@
           <a class="nav-link" routerLink="Ajout">Ajouter Produit</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" routerLink="TODO">ListeTodo</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" routerLink="Contact">Contact</a>
         </li>
 
